Updated glossary links and equation links

--- a/AnatomyOfARobot.ipynb
+++ b/AnatomyOfARobot.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Links and Joints\n",
+    "## Links and joints\n",
     "\n",
     "Like the bones of an animal, a robot's links offer structural support\n",
     "and protection of internal parts. Most often, some sort of metal is used\n",
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Actuators and Transmissions\n",
+    "## Actuators and transmissions\n",
     "\n",
     "An actuator is a mechanism that generates a force / torque given electrical signals; a transmission is a mechanism that applies an actuator's forces / torques to the robot's links.  Most commonly on industrial robots, actuators are electric motors while the transmissions are some sort of gearing system (e.g., gearbox).  On mobile robots, the transmissions from actuators to the ground are actually the wheels (or tracks).  It is also common to think of (and purchase) the actuator and transmission as a unit, such as with servomotors.\n",
     "\n",
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cognitive Architectures\n",
+    "## Cognitive architectures\n",
     "\n",
     "The title of this section is a bit misleading: robots don't perform\n",
     "\"cognition\" as humans and animals do. However, they do indeed need to\n",
@@ -253,6 +253,7 @@
     "performance metric, like tracking a curve as closely as possible, or\n",
     "having a low risk of colliding with pedestrians, etc.\n",
     "\n",
+    "<a id=\"reflexive\"></a>\n",
     "First, we will consider a *simple reflexive* architecture, in which the\n",
     "inputs are converted to outputs via a set of fixed operations (*rules*).\n",
     "Examples of this architecture include servomotors, automatic doors, some\n",
@@ -264,6 +265,7 @@
     "that is immediately provided to them, and do not derive any richer\n",
     "understanding.\n",
     "\n",
+    "<a id=\"model-based-reflexive\"></a>\n",
     "In the *model-based* reflexive architecture, the robot estimates the\n",
     "current *state* of its environment using history. State represents an\n",
     "understanding of the robot's body and world, which may include\n",
@@ -280,6 +282,7 @@
     "modern automobiles (e.g., automatic braking and lane keeping). We will\n",
     "cover dynamic models in detail in Section IV and state estimation in Section VI.\n",
     "\n",
+    "<a id=\"deliberative\"></a>\n",
     "The next level of architecture complexity adds prediction and\n",
     "deliberation into the fold. A *deliberative* architecture uses a\n",
     "*predictive model* to estimate how its future actions alter the\n",
@@ -295,6 +298,7 @@
     "the robot is truly a good measure of performance (as judged by human\n",
     "observers). Section III covers planning in detail.\n",
     "\n",
+    "<a id=\"learning\"></a>\n",
     "Finally, a *learning* architecture incorporates sensor data over time to\n",
     "automatically adapt components of its predictive models, state estimators,\n",
     "and/or planners.  The amount of learning can be relatively small, such as\n",
@@ -346,10 +350,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Summary\n",
+    "\n",
+    "### Key takeaways\n",
+    "\n",
+    "* A robot's body is defined by links, joints, sensors, and actuators.  Links are typically rigid (but not always, in the case of soft robots).\n",
+    "* Proprioceptive, inertial, visual, and tactile sensors are the most common sensors on modern robots.\n",
+    "* The sense-plan-act framework connects the robot's cognition, encapsulated as the intermediate plan step, with its sensors and actuators which interact with the external world.\n",
+    "* In the classical cognitive architecture, the \"plan\" step is further broken down into perception (building representations of the state of the robot and the external world), planning (using those representations to make decisions about what to do next), and control (converting decisions into actions).\n",
+    "* Hierarchical architectures break down the perception and decision-making stages into slow, medium, and fast levels which interact at different rates.  Here, planning and control are grouped together into the single decision-making stage: planning is just thought of as the slow / medium levels, while control is the fastest level.\n",
+    "* In the end-to-end cognitive architecture, the \"plan\" step is a complex neural network trained from data, usually reinforcement learning or imitation learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Glossary\n",
+    "* [Link](#Links-and-joints): A rigid component of a robot, usually connected to other links by joints.\n",
+    "* [Joint](#Links-and-joints): An articulation point between two links.\n",
+    "* [Sensor](#Sensors): A device that measures a quantity in the physical world and reports it in electrical form. \n",
+    "* [Actuator](#Actuators-and-transmissions): A source of controllable force.\n",
+    "* [Cognitive architecture](#Cognitive-architectures): The form and function of information processing elements (software) that run on a robot's computing hardware to process sensor input and generate actuator output.\n",
+    "\n",
+    "Sensing\n",
+    "* [Proprioception](#Sensors): Sensing that measures the position of a link relative to another.\n",
+    "* [Inertial sensing](#Sensors): Sensing that measures the position of a link relative to a fixed (world) frame.\n",
+    "* [Tactile sensor](#Sensors): Sensing that measure forces applied to links.\n",
+    "* [Vision sensor](#Sensors): Sensing that measures light (electromagnetic radiation), whether in the visible spectrum or not. \n",
+    "\n",
+    "Actuation\n",
+    "* [Transmission](#Actuators-and-transmissions): A device that connects an actuator to forces on one or more links.\n",
+    "* [Gear reduction](#Actuators-and-transmissions): The force multiplier from input to output.  The force multiplier is accompanied by a proportional reduction in velocity.\n",
+    "* [Backlash](#Actuators-and-transmissions): A \"dead-band\" about which force is not productively generated when the motion of direction is switched.  Usually caused by spacing between gear teeth.\n",
+    "* [Backdrivability](#Actuators-and-transmissions): The degree to which an actuator and its corresponding joint can be moved via the application of external forces.  \n",
+    "\n",
+    "Cognition\n",
+    "* [Sense-plan-act framework](#Sense-plan-act-framework): A classical framework by which cognitive architectures are modeled.  The cognitive (computational) aspects of the robot lie within the \"plan\" block, while the other blocks represent input and output from the physical environment.\n",
+    "* [Reflexive agent](#reflexive): An agent that operates according to fixed rules that process sensor inputs into actuator outputs.  A [model-based reflexive agent](#model-based-reflexive) performs some degree of perception to process sensor inputs into estimated physical quantities.\n",
+    "* Model-based agent\n",
+    "* [Perception-planning-control architecture](##Perception,-planning,-and-control;-hierarchical-architectures): A classical division of responsibilities in the \"plan\" block of the sense-plan-act framework.  Perception processes the sensing input into a world representation, planning makes decisions, and control converts those decisions into actuator outputs.\n",
+    "* [Hierarchical architecture](#Perception,-planning,-and-control;-hierarchical-architectures): A division of the perception-planning-control pipeline into parallel slow and fast tracks depending on the computational complexity of components.  Control is typically treated as \"fast planning\".\n",
+    "* [End-to-end learning](#The-end-to-end-approach): A more recent framework that eliminates the perception-planning-control framework in favor of a mapping from sensor input to actuator output, learned either through reinforcement learning or imitation learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
