--- a/SystemIntegration.ipynb
+++ b/SystemIntegration.ipynb
@@ -42,7 +42,8 @@
     "\n",
     "(A bit of definition: technically, a *process* is an instantiated *program*, and the OS can run multiple processes corresponding to the same program. Complicating things further, a process can run multiple concurrent *threads*, and a process can spawn multiple *sub-processes*.  For now let's assume that we are generating a single process of a single program that runs a single thread and no sub-processes. )\n",
     "\n",
-    "Let's try to write a simple program that performs a repetitive task at 20Hz.  Let's encapsulate the task in a single function called `do_work`.  Now, to get this code to run, your first attempt might be something like this."
+    "<a id=\"execution-loop\"></a>\n",
+    "Let's try to write a simple program that performs a repetitive task at 20Hz.  Let's encapsulate the task in a single function called `do_work`.  Now, you will need to write an *execution loop* that repeatedly calls the task.  To get this code to run, your first attempt might be something like this."
    ]
   },
   {
@@ -554,6 +555,7 @@
     "\n",
     "For full-featured event loop frameworks, this lets you put pretty much your entire program into the event loop!\n",
     "\n",
+    "<a id=\"callback\"></a>\n",
     "In the *callback* paradigm, the framework allows you to *bind* an event to perform a *callback function* that gets triggered whenever the event occurs.  We will indeed bind events to our handlers, so \"handler\" and \"callback\" are synonymous in this paradigm.  ROS and many GUI packages use callbacks to implement their event loops.  The general implementation will look something like this, where the `set_callback` and  `run_event_loop` functions are provided by the framework.\n",
     "\n",
     "```python\n",
@@ -1997,10 +1999,10 @@
     "### Glossary\n",
     "\n",
     "Real-time programming\n",
-    "- Execution loop\n",
-    "- Polling loop\n",
-    "- Event loop\n",
-    "- Sleep\n",
+    "- [Execution loop](#execution-loop): the main loop of a real-time program that repeatedly performs some work until a termination criterion is met.\n",
+    "- [Blocking](#blocking-requests): when a function call stops the execution of our application's code until an interaction (with another process or device) completes.\n",
+    "- [Polling loop](#polling-loops): an execution loop that avoids blocking by repeatedly checking whether events (such as the arrival of a message from another process) are present before executing corresponding program logic.  Event checks are performed at a fixed rate. \n",
+    "- [Event loop](#event-loops): an execution loop that responds to events via callbacks.  Callbacks implement the program logic, and are triggered by the event system, which frequently takes control over the execution loop.\n",
     "- Callback\n",
     "- State machine\n",
     "- Thread\n",
