--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -221,6 +221,7 @@
    "source": [
     "### Geometric operations\n",
     "\n",
+    "<a id=\"interpolation\"></a>\n",
     "The coordinates of a point $\\mathbf{p}$ after translation by a displacement\n",
     "$\\mathbf{d}$ can be computed by vector addition $\\mathbf{p} + \\mathbf{d}$.\n",
     "Interpolation and extrapolation between points $\\mathbf{p}$, $\\mathbf{q}$ is\n",
@@ -261,7 +262,7 @@
     "    \\mathbf{x} \\cdot (\\mathbf{p} - \\mathbf{q})^\\perp = \\mathbf{p} \\cdot (\\mathbf{p} - \\mathbf{q})^\\perp\n",
     "$$\n",
     "\n",
-    "Another expression of lines is the following:\n",
+    "Another expression of 2D lines is the following:\n",
     "\n",
     "$$\n",
     "    \\mathbf{x} \\cdot \\mathbf{n} = c\n",
@@ -271,6 +272,7 @@
     "$c = \\mathbf{p} \\cdot \\mathbf{n}$ for any point $\\mathbf{p}$ on the line.\n",
     "(<a href=\"#fig:LineEquation\">Fig. 4.b.</a>)\n",
     "\n",
+    "<a id=\"plane-equation\"></a>\n",
     "This definition is known as the *plane equation*, which generalizes\n",
     "lines in 2D to planes in 3D and hyperplanes in higher dimensions. Each\n",
     "of these is object of $n-1$ dimensions in an $n$-dimensional space,\n",
@@ -445,6 +447,7 @@
     "6.  The rotation matrix is only dependent on the argument's value modulo\n",
     "    $2\\pi$.\n",
     "\n",
+    "<a id=\"so2\"></a>\n",
     "The space of rotations is known as the *special orthogonal group*\n",
     "$SO(2)$. The reason why it is called the special orthogonal group is\n",
     "that it is the set of all orthogonal $2\\times 2$ matrices with positive\n",
@@ -473,7 +476,10 @@
     "let us describe some of their properties.\n",
     "\n",
     "A rotation in 3D can be represented by a matrix equation\n",
-    "$$\\mathbf{p}^\\prime = R \\mathbf{p}$$ with $R$ a $3\\times 3$ rotation matrix.\n",
+    "$$\n",
+    "    \\mathbf{p}^\\prime = R \\mathbf{p}\n",
+    "$$\n",
+    "with $R$ a $3\\times 3$ rotation matrix.\n",
     "\n",
     "\n",
     "***************\n",
@@ -501,6 +507,7 @@
     "\n",
     "5.  Vector norms are invariant under rotation.\n",
     "\n",
+    "<a id=\"so3\"></a>\n",
     "The space of 3D rotations is known as the *special orthogonal group*\n",
     "$SO(3)$.\n",
     "\n",
@@ -664,7 +671,10 @@
     "rotation about $\\mathbf{c}$ can be constructed by translating a point so that\n",
     "$\\mathbf{c}$ is the origin, then rotating about the origin by some matrix\n",
     "$R$, and then translating back to the original origin. This form is:\n",
-    "$$T(\\mathbf{x}) = R(\\mathbf{x} - \\mathbf{c}) + \\mathbf{c}.$$ The parenthetical term is the\n",
+    "$$\n",
+    "  T(\\mathbf{x}) = R(\\mathbf{x} - \\mathbf{c}) + \\mathbf{c}.\n",
+    "$$\n",
+    "The parenthetical term is the\n",
     "translation to $\\mathbf{c}$ as the origin, the multiplication by $R$ is the\n",
     "rotation about the new origin, and the addition of $\\mathbf{c}$ is the\n",
     "translation back to the original origin. These two representations are\n",
@@ -720,9 +730,12 @@
     "invertible, with the inverse transformation $A^{-1}\\mathbf{x}$.\n",
     "\n",
     "Rigid transformations are also invertible, and their inverse is also a\n",
-    "rigid transformation: $$\\label{eq:RigidTransformInverse}\n",
-    "T_{(R,\\mathbf{t})} ^{-1} = T_{(R^{T},-R^{T} \\mathbf{t})}$$ where\n",
-    "$T_{(R,\\mathbf{t})}(\\mathbf{x}) = R \\mathbf{x} + \\mathbf{t}$. Proof of this equation will be\n",
+    "rigid transformation:\n",
+    "$$\n",
+    "  \\label{eq:RigidTransformInverse}\n",
+    "  T_{(R,\\mathbf{t})} ^{-1} = T_{(R^{T},-R^{T} \\mathbf{t})}\n",
+    "$$\n",
+    "where $T_{(R,\\mathbf{t})}(\\mathbf{x}) = R \\mathbf{x} + \\mathbf{t}$. Proof of this equation will be\n",
     "left as an exercise."
    ]
   },
@@ -855,7 +868,7 @@
     "\n",
     "The nice thing about this representation is that transform application is a matrix-vector multiply, transform composition is a matrix-matrix multiply, and transform inversion is a matrix inversion. This makes it much easier to write out complex transformations. For example, consider the problem of the coordinate transform from frame $A$ to frame $B$ that we described above.  Rather than writing out the operator expression $T_B^{-1}(T_A(\\mathbf{p}^A))$, using homogeneous coordinates this becomes a series of matrix-matrix and matrix-vector multiplies:\n",
     "\n",
-    "$$\\hat{p}^B = \\hat{T}_B^{-1} \\cdot \\hat{T}_A \\cdot \\hat{p}^A$$."
+    "$$\\hat{p}^B = \\hat{T}_B^{-1} \\cdot \\hat{T}_A \\cdot \\hat{p}^A.$$"
    ]
   },
   {
@@ -1165,7 +1178,7 @@
     "Summary\n",
     "-------\n",
     "\n",
-    "Key takeaways:\n",
+    "### Key takeaways\n",
     "\n",
     "-   Coordinates are numerical representations of geometric concepts,\n",
     "    like points, directions, frames of reference, and movement.\n",
@@ -1185,6 +1198,27 @@
     "-   When working with coordinates it is easy to make mistakes. Having\n",
     "    clear assumptions, clear notation and/or using coordinate management\n",
     "    software can reduce the risk of error.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Glossary\n",
+    "\n",
+    "* [Point](#Vectors-and-coordinates): A vector representing a location in space.\n",
+    "* [Displacement](#Directional-quantities): A vector representing the difference between points.\n",
+    "* [Direction](#Directional-quantities): A unit vector that represnts a normalized difference between points or normalized velocity. \n",
+    "* [Coordinates](#Vectors-and-coordinates): A collection of numbers representing a point, direction, or displacement quantity relative to some coordinate frame.  \n",
+    "* [Coordinate frame](#2D-coordinate-frames): a collection of an origin point and orthogonal axis vectors (e.g., X, Y, and Z) that may be used to represent points, directions, and displacements as coordinates.\n",
+    "* [Linear interpolation](#interpolation): An equation $y(u)$ of constant velocity between points $\\mathbf{p}$ to $\\mathbf{q}$, reaching $\\mathbf{p}$ at $u=0$ and $\\mathbf{q}$ at $u=1$.  The equation is given by $y(u) = (1-u)\\mathbf{p} + u\\mathbf{q}$ or equivalently $y(u) = \\mathbf{p} + u(\\mathbf{q}-\\mathbf{p})$.\n",
+    "* [Plane equation](#plane-equation): An equation that is held at any point on an infinite plane. The equation is $\\mathbf{x} \\cdot \\mathbf{n} = c $ where $\\mathbf{x}$ is any point on the plane, $\\mathbf{n}$ is the plane normal, and $c$ is an offset scalar. \n",
+    "* [Rotation](#Rotations-in-2D): an orientation-preserving, orthogonal, linear transform.  Rotations preserve distances between points, that is, $\\|Rx-Ry\\|=\\|x-y\\|$ for all $x$ and $y$.  \n",
+    "* [Rotation matrix](#Representation-of-coordinate-frames-and-coordinate-transforms): a 2x2 or 3x3 matrix that represents a rotation.  A rotation matrix is orthogonal and has determinant +1. \n",
+    "* [SO(2)](#so2): the mathematical notation for the space of 2D rotations, called the special orthogonal group.\n",
+    "* [SO(3)](#so3): the mathematical notation for the space of 3D rotations, called the special orthogonal group.\n",
+    "* [Rigid transform](#Rigid-transformations): An affine transform that combines a rotation and a translation.  Like rotations, rigid transform preserves distances between points.\n",
+    "* [Homogeneous coordinates](#Homogeneous-coordinate-representations): A way to represent rigid transforms as linear transforms (matrices).  A 3x3 (in 2D) or 4x4 (in 3D) matrix that contains the rotation part in the upper left, and the translation part in the upper right.  Points are then represented with an additional 1 in the (d+1)'th coordinate, and directional quantities are represented with a 0 in this coordinate.\n"
    ]
   },
   {
@@ -1342,9 +1376,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "tags": [
      "remove_cell_html"
     ]
@@ -1400,7 +1432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1414,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
