Changed referenced equations to \begin/\end{equation}

--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -99,8 +99,10 @@
     "rules include multiple events on the right hand side:\n",
     "$$P(e_1 | e_2 \\wedge e_3) = P(e_1 \\wedge e_2 \\wedge e_3) / P(e_2 \\wedge e_3)$$\n",
     "which can be easily shown to be equal to\n",
-    "$$P(e_1 | e_2 \\wedge e_3) = P(e_1 \\wedge e_2 | e_3) / P(e_2 | e_3).\n",
-    "\\label{eq:ConditioningThreeEvent}$$\n",
+    "\\begin{equation}\n",
+    "P(e_1 | e_2 \\wedge e_3) = P(e_1 \\wedge e_2 | e_3) / P(e_2 | e_3).\n",
+    "\\label{eq:ConditioningThreeEvent}\n",
+    "\\end{equation}\n",
     "\n",
     "The *conditional distribution* expresses the probability distribution of\n",
     "one or more variables given the value of some other variable(s). If $Y$\n",
@@ -120,7 +122,7 @@
     "$$P(X=x,Y=y|Z=z,W=w) = P(X=x,Y=y,Z=z,W=w)/P(Z=z,W=w).$$ Conditioning\n",
     "rules for events also extends to variables, such as\n",
     "$$P(x,y,z|w) = P(x,y|z,w)P(z|w)$$ which is a restatement of\n",
-    "($\\ref{eq:ConditioningThreeEvent}$).\n",
+    "$\\eqref{eq:ConditioningThreeEvent}$.\n",
     "\n",
     "It is important to note that a conditional distribution is a true\n",
     "probability distribution over the variables on the left-hand side of the\n",
@@ -358,13 +360,19 @@
     "$g$ and $G$ be the unknown pdf and cdf of $Y$, and let us examine how to\n",
     "compute a specific value of $G(y)$. Each point $x$ \"counts\" toward the\n",
     "sum as long as $h(x) \\leq y$. Hence, the following equation holds:\n",
-    "$$G(y) = P(Y \\leq y) = \\int_{-\\infty}^{\\infty} I[h(x) \\leq y] P(X=x) dx.\n",
-    "\\label{eq:ProbabilityTransformedY}$$ If we use the assumption that $h$\n",
+    "\\begin{equation}\n",
+    "G(y) = P(Y \\leq y) = \\int_{-\\infty}^{\\infty} I[h(x) \\leq y] P(X=x) dx.\n",
+    "\\label{eq:ProbabilityTransformedY}\n",
+    "\\end{equation}\n",
+    "If we use the assumption that $h$\n",
     "is monotonically increasing, then $h(x) \\leq y$ is true if and only if\n",
     "$x \\leq h^{-1}(y)$. Hence, we can rewrite\n",
-    "($\\ref{eq:ProbabilityTransformedY}$) as\n",
-    "$$G(y) = \\int_{-\\infty}^{h^{-1}(y)} f(x) dx = F(h^{-1}(y)).\n",
-    "\\label{eq:ProbabilityTransformedY2}$$ Using this formula, we can derive\n",
+    "$\\eqref{eq:ProbabilityTransformedY}$ as\n",
+    "\\begin{equation}\n",
+    "G(y) = \\int_{-\\infty}^{h^{-1}(y)} f(x) dx = F(h^{-1}(y)).\n",
+    "\\label{eq:ProbabilityTransformedY2}\n",
+    "\\end{equation}\n",
+    "Using this formula, we can derive\n",
     "a few results about simple transformations:\n",
     "\n",
     "-   If $c$ is a constant, then $P(X + c \\leq x) = P(X \\leq x-c)$.\n",
@@ -377,11 +385,11 @@
     "\n",
     "Let us now return to the function $h(x)=x^2$ as we proposed originally.\n",
     "This is not monotonically increasing, so we cannot directly apply\n",
-    "($\\ref{eq:ProbabilityTransformedY2}$). However, we can split its\n",
+    "$\\eqref{eq:ProbabilityTransformedY2}$. However, we can split its\n",
     "domain into two parts, $x \\geq 0$ and $x < 0$. The second part is\n",
     "monotonically decreasing, so we shall have to handle that slightly\n",
     "differently. We can still apply\n",
-    "($\\ref{eq:ProbabilityTransformedY}$) to obtain\n",
+    "$\\eqref{eq:ProbabilityTransformedY}$ to obtain\n",
     "$$G(y) = P(Y \\leq y) = \\int_{-\\infty}^{\\infty} I[x^2 \\leq y] f(x) dx$$\n",
     "which can be split into two parts in which $h$ is monotonic. Performing\n",
     "a flip in the integration range for the negatively decreasing part, we\n",
@@ -410,17 +418,20 @@
     "This is not so easy to compute in general; for example, the sum of two\n",
     "uniformly distributed random variables $X$ and $Y$ on the range $[0,1]$\n",
     "has the pdf $P(X+Y = z) = 0$ for $z \\leq 0$ and $z \\geq 0$, and for all\n",
-    "other $z$ $$\\begin{aligned}\n",
+    "other $z$\n",
+    "$$\\begin{aligned}\n",
     "P(X+Y \\leq z) &= \\int_{-\\infty}^{\\infty} P(X=z-y)P(Y=y) dy \\\\\n",
     "& = \\int_{0}^{1} P(X = z-y) dy \\\\\n",
     "& = \\int_{0}^{1} (I[z\\geq y]-I[z\\geq y+1]) dy \\\\\n",
     "& = \\int_{0}^{1} I[z\\geq y]dy - \\int_{0}^{1} I[z\\geq y+1] dy.\n",
-    "\\end{aligned}$$ If $z \\geq 1$, then $z \\geq y$ and the indicator\n",
+    "\\end{aligned}$$\n",
+    "If $z \\geq 1$, then $z \\geq y$ and the indicator\n",
     "function in the first integral is always active. If $z < 1$, then\n",
     "$z < y+1$ and the indicator function in the second integral is never\n",
     "active. Hence, if $z < 1$,\n",
-    "$$P(X+Y = z) = \\int_0^1 I[z \\geq y]dy = \\int_0^z 1 dy = z$$ and for\n",
-    "$z \\geq 1$, $$\\begin{aligned}\n",
+    "$$P(X+Y = z) = \\int_0^1 I[z \\geq y]dy = \\int_0^z 1 dy = z$$\n",
+    "and for $z \\geq 1$,\n",
+    "$$\\begin{aligned}\n",
     "P(X+Y = z) &= \\int_0^1 I[z \\geq y]dy - \\int_0^1 I[z \\geq y+1] \\\\\n",
     "& = \\int_0^1 1 dy - \\int_0^{z-1} 1 dy = 1 - (z-1) = 2-z.\n",
     "\\end{aligned}$$\n",
@@ -469,8 +480,11 @@
     "variable $\\mathbf{X}=[X_1,...,X_n]^T \\in \\mathbb{R}^n$ with mean vector\n",
     "$\\mathbf{\\mu}$ and covariance matrix $\\Sigma$ has the density\n",
     "function:\n",
-    "$$P(\\mathbf{x}) = N(\\mathbf{x};\\mathbf{\\mu},\\Sigma) = \\frac{1}{(2\\pi)^{n/2}\\sqrt{|\\Sigma|}} e^{-\\frac{1}{2} (\\mathbf{x}-\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu})}.\n",
-    "\\label{eq:MultivariateGaussian}$$ Like the (univariate) Gaussian\n",
+    "\\begin{equation}\n",
+    "P(\\mathbf{x}) = N(\\mathbf{x};\\mathbf{\\mu},\\Sigma) = \\frac{1}{(2\\pi)^{n/2}\\sqrt{|\\Sigma|}} e^{-\\frac{1}{2} (\\mathbf{x}-\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu})}.\n",
+    "\\label{eq:MultivariateGaussian}\n",
+    "\\end{equation}\n",
+    "Like the (univariate) Gaussian\n",
     "distribution, it has a peak at $x=\\mathbf{\\mu}$, and its spread is\n",
     "determined by the matrix $\\Sigma$.\n",
     "[Fig. 1](#fig:Gaussian) shows the pdf of a bivariate Gaussian with\n",
@@ -502,7 +516,7 @@
     "in the upper left and lower right quadrants.\n",
     "\n",
     "Deriving the following facts requires some extensive manipulation\n",
-    "of ($\\ref{eq:MultivariateGaussian}$). We shall simply state them without\n",
+    "of $\\eqref{eq:MultivariateGaussian}$. We shall simply state them without\n",
     "proof; the proofs are left as exercise for the interested reader.\n",
     "\n",
     "#### Stacking of multivariate Gaussians\n",
@@ -557,8 +571,11 @@
     "$$\\begin{bmatrix}{\\mathbf{X}} \\\\ {\\mathbf{Y}} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}{\\mathbf{\\mu}_X} \\\\ {\\mathbf{\\mu}_Y} \\end{bmatrix},\\begin{bmatrix}{\\Sigma_X}&{\\Sigma_{XY}} \\\\ {\\Sigma_{XY}^T}&{\\Sigma_Y} \\end{bmatrix}\\right),$$\n",
     "then the conditional distribution of $\\mathbf{X}$ given that $\\mathbf{Y}=\\mathbf{y}$ is\n",
     "also Gaussian:\n",
-    "$$P(\\mathbf{x}|\\mathbf{y}) = N\\left( \\mathbf{x};\\mathbf{\\mu}_X+\\Sigma_{XY}\\Sigma_Y^{-1}(\\mathbf{y}-\\mathbf{\\mu}_Y),\\Sigma_X - \\Sigma_{XY}\\Sigma_Y^{-1}\\Sigma_{XY}^T \\right)\n",
-    "\\label{eq:GaussianConditioning}$$ It can be observed that the mean of\n",
+    "\\begin{equation}\n",
+    "P(\\mathbf{x}|\\mathbf{y}) = N\\left( \\mathbf{x};\\mathbf{\\mu}_X+\\Sigma_{XY}\\Sigma_Y^{-1}(\\mathbf{y}-\\mathbf{\\mu}_Y),\\Sigma_X - \\Sigma_{XY}\\Sigma_Y^{-1}\\Sigma_{XY}^T \\right)\n",
+    "\\label{eq:GaussianConditioning}\n",
+    "\\end{equation}\n",
+    "It can be observed that the mean of\n",
     "the new distribution depends on the value of $y$, but the covariance\n",
     "does not. Observe also that if $\\mathbf{X}$ and $\\mathbf{Y}$ are independent\n",
     "($\\Sigma_{XY}=0$), then knowing the value of $\\mathbf{Y}$ does not change the\n",
@@ -582,7 +599,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -596,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
