Added endlines for better display in VScode. Added glossary

--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -546,11 +546,13 @@
     "\n",
     "If the reference frame of the robot is a shape $R_0$, then the volume\n",
     "occupied after translation $q$ is the set\n",
-    "$$R(q) = \\{ x \\,|\\, x-q \\in R_0 \\}$$ If $P$ is a workspace\n",
+    "$$R(q) = \\{ x \\,|\\, x-q \\in R_0 \\}.$$\n",
+    "If $P$ is a workspace\n",
     "obstacle, the the condition that $R(q) \\cap O \\neq \\emptyset$ requires\n",
     "that there exists some $x \\in \\mathbb{R}^2$ such that $x \\in R(q)$ and\n",
     "$x \\in O$. This is equivalent to the condition that:\n",
-    "$$q \\in O \\ominus R_0.$$ To see this, observe that if\n",
+    "$$q \\in O \\ominus R_0.$$\n",
+    "To see this, observe that if\n",
     "$q \\in O \\ominus R_0$, then there exists $x \\in O$ and $y \\in R_0$ such\n",
     "that $q = x - y$. In other words, $y = x-q \\in R_0$ implies that\n",
     "$x \\in R(q)$. As a result, constructing the C-obstacle is equivalent to\n",
@@ -3108,6 +3110,8 @@
     "Summary\n",
     "-------\n",
     "\n",
+    "### Key takeaways\n",
+    "\n",
     "* Geometric motion planning methods can achieve completeness or resolution completeness in low-dimensional configuration spaces.\n",
     "* The major classes of geometric planners are bug methods, grid search, visibility graph methods, and cell decomposition.\n",
     "* Bug algorithms only use local information about obstacles and a small amount of memory to make decisions on-line.  They are sufficiently simple that their completeness and suboptimality can be analyzed using geometric reasoning.\n",
@@ -3115,6 +3119,22 @@
     "* Visibility graph methods build a network of free paths between obstacle vertices. They are complete and optimal in 2D configuration spaces, but take at least $O(n^2)$ time and $O(n^2)$ space to build.\n",
     "* Cell decomposition methods build a representation of the free space volume as a collection of simple geometric shapes. They can be complete, optimal, and constructed efficiently ($O(n \\log n)$ for the trapezoidal decomposition).\n",
     "* Translating robots with geometry can be converted into point robot problems by constructing C-obstacles. This can be done using the Minkowski difference operation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Glossary\n",
+    "\n",
+    "* Planar path planning\n",
+    "* Bug algorithms\n",
+    "* Grid search\n",
+    "* Visibility graph\n",
+    "* Cell decomposition\n",
+    "* Trapezoidal decomposition\n",
+    "* C-obstacle\n",
+    "* Minkowski difference"
    ]
   },
   {
