Added VSCode notes

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -117,10 +117,11 @@
     "\n",
     "The book comes in [HTML](https://motion.cs.illinois.edu/RoboticSystems/) and Jupyter Notebook formats, and running the full Jupyter Notebook provides the most complete experience, with inline quizzes and code examples that you can visualize and edit live in your browser.\n",
     "\n",
-    "There are three routes to running the Jupyter notebooks:\n",
+    "There are four routes to running the Jupyter notebooks:\n",
     "- [Binder](#Running-on-Binder)\n",
     "- [Google Colab](#Running-on-Google-Colab)\n",
-    "- [Local Jupyter installation](#Jupyter-Notebook-installation-on-local-machine)"
+    "- [Local Jupyter installation](#Jupyter-Notebook-installation-on-local-machine)\n",
+    "- [VSCode](#VSCode-issues)"
    ]
   },
   {
@@ -218,7 +219,7 @@
     "\n",
     "  * [Git](https://git-scm.com/download)\n",
     "  * Python 3.5+ and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
-    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8.5+ Python API.\n",
+    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.9.0+ Python API.\n",
     "  * [Klampt-jupyter-extension](http://github.com/krishauser/Klampt-jupyter-extension) for live Klamp't windows.\n",
     "  \n",
     "On most systems (Linux, Windows, OSX), the Klamp't Python API and Jupyter extension can be installed using `pip` as follows:\n",
@@ -282,6 +283,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## VSCode issues\n",
+    "\n",
+    "VSCode is becoming ever more popular, and it can almost be used like a local Jupyter installation, but its notebook rendering has many limitations. Specifically:\n",
+    "- [Equation numbering and cross-referencing](https://github.com/microsoft/vscode/issues/177717) is broken, so you are likley to see equation rendering / cross-reference error messages in red. \n",
+    "- The nice code-folding extension of Jupyter notebook is not supported, so you will see large code blocks that interrupt the flow of the text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "5lKTX3myr9os"
    },
@@ -289,15 +301,9 @@
     "Known issues\n",
     "============\n",
     "\n",
-    "Jupyter Notebook LaTeX rendering uses MathJAX inside Markdown, which occasionally has trouble rendering complex equations.  If you see stray code like `= \\begin{equation}` etc, this is a [known rendering problem](https://github.com/jupyter/notebook/issues/2865) with multiple matrices.  It seems like this problem is more prevalent in static HTML and Colab; try opening the book in a native Jupyter Notebook or on Binder if these rendering issues prevent you from understanding the equation."
+    "Jupyter Notebook LaTeX rendering uses MathJAX inside Markdown, which occasionally has trouble rendering complex equations.  If you see stray code like `= \\begin{equation}` etc, this is a [known rendering problem](https://github.com/jupyter/notebook/issues/2865) with multiple matrices.  It seems like this problem is more prevalent in static HTML and Colab; try opening the book in a native Jupyter Notebook or on Binder if these rendering issues prevent you from understanding the equation.\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
