--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -169,7 +169,7 @@
     "compact, mathematically convenient, and lend themselves to fast\n",
     "geometric operations: exact calculations can be calculated in constant\n",
     "($O(1)$) time. (For more information about Big-O notation, consult\n",
-    "[Appendix C.1.](GraphsAndSearch.ipynb#sec:Big-o-notation)) However, they are the least flexible\n",
+    "[Appendix C.1.](GraphSearch.ipynb#sec:Big-o-notation)) However, they are the least flexible\n",
     "representation and do not represent most real geometries with high\n",
     "fidelity.\n",
     "\n",
