--- a/SystemIntegration.ipynb
+++ b/SystemIntegration.ipynb
@@ -40,6 +40,7 @@
     "\n",
     "All other computers you are likely to run into are multiprocessors, which allow running multiple processes at once, including the terminal, the operating system (OS) services, the OS graphical user interface (GUI), hardware drivers, etc.  Unlike uniprocessors, your code does not have complete control over its execution. Instead, the OS handles all aspects of timing the execution of your code, and your code only makes requests to sleep or delay computations and make system calls.  The manner in which the OS chooses to execute program code is known as *scheduling*.   The scheduler has a certain scheduling precision (approximately 1ms on Linux, variable on Windows), handles contention between multiple processes for CPU and other resources, and orders processes according to their priority levels.  As a result, your code may not be able to have tight control over its timing.\n",
     "\n",
+    "<a id=\"processes\"></a>\n",
     "(A bit of definition: technically, a *process* is an instantiated *program*, and the OS can run multiple processes corresponding to the same program. Complicating things further, a process can run multiple concurrent *threads*, and a process can spawn multiple *sub-processes*.  For now let's assume that we are generating a single process of a single program that runs a single thread and no sub-processes. )\n",
     "\n",
     "<a id=\"execution-loop\"></a>\n",
@@ -736,7 +737,8 @@
     "\n",
     "Unfortunately, many event-driven frameworks do not provide such functionality, and instead ask you to implement your entire program within the `run_event_loop` executor function.  In this case, embedding polling into the event loop is a better option.\n",
     "\n",
-    "To mix blocking calls or accomplish very complex integrations between polling and event-based loops, you may need to resort to *multithreading*.  Multithreading uses the OS to interweave the computations between a single program's execution loops.  In this way, you can implement separate loops, and integrate their interactions in your handlers.  The tricky thing with multithreading is to ensure that reads and writes do not case *race conditions*, which are unexpected behavior due to the thread scheduler interleaving code between multiple threads in interesting ways.  A full discussion of multithreading is beyond the scope of this book, but suffice to say that this is usually handled by *locking* critical sections.  If you are using the separation of calcuation and communication paradigm that we described above, this can be handled globally using a shared lock and wrapping handlers in the lock, as follows:\n",
+    "<a id=\"threading\"></a>\n",
+    "To mix blocking calls or accomplish very complex integrations between polling and event-based loops, you may need to resort to *multithreading*.  Multithreading uses the OS to interweave the computations between multiple execution loops in a single program.  In this way, you can implement separate loops, and integrate their interactions in your handlers.  Threads share memory and can access the same variables in your program, so inter-thread communication is a simple matter of changing variable values.  However, the tricky thing with multithreading is to ensure that reads and writes do not case *race conditions*, which are unexpected behavior due to the thread scheduler interleaving code between multiple threads in interesting ways.  A full discussion of multithreading is beyond the scope of this book, but suffice to say that this is usually handled by *locking* critical sections.  If you are using the separation of calcuation and communication paradigm that we described above, this can be handled globally using a shared lock and wrapping handlers in the lock, as follows:\n",
     "\n",
     "```python\n",
     "import threading\n",
@@ -1999,15 +2001,15 @@
     "### Glossary\n",
     "\n",
     "Real-time programming\n",
-    "- [Execution loop](#execution-loop): the main loop of a real-time program that repeatedly performs some work until a termination criterion is met.\n",
-    "- [Blocking](#blocking-requests): when a function call stops the execution of our application's code until an interaction (with another process or device) completes.\n",
-    "- [Polling loop](#polling-loops): an execution loop that avoids blocking by repeatedly checking whether events (such as the arrival of a message from another process) are present before executing corresponding program logic.  Event checks are performed at a fixed rate. \n",
-    "- [Event loop](#event-loops): an execution loop that responds to events via callbacks.  Callbacks implement the program logic, and are triggered by the event system, which frequently takes control over the execution loop.\n",
-    "- Callback\n",
-    "- State machine\n",
-    "- Thread\n",
-    "- Process\n",
-    "- Launcher\n",
+    "- [Execution loop](#execution-loop): The main loop of a real-time program that repeatedly performs some work until a termination criterion is met.\n",
+    "- [Blocking](#Blocking-requests): When a function call stops the execution of our application's code until an interaction (with another process or device) completes.\n",
+    "- [Polling loop](#Polling-loops): An execution loop that avoids blocking by repeatedly checking whether events (such as the arrival of a message from another process) are present before executing corresponding program logic.  Event checks are performed at a fixed rate. \n",
+    "- [Event loop](#Event-loops): An execution loop that responds to events via callbacks.  Callbacks implement the program logic, and are triggered by the event system, which frequently takes control over the execution loop.\n",
+    "- [Callback](#Event-loops): A function that is called by an event system when an event happens.  Callbacks are defined by the application to implement the program logic.\n",
+    "- [State machine](#State-machines): A common paradigm for programming real-time systems that change functionality at discrete points in time in response to events.  Each state implements a functionality, and events correspond to transitions between states.\n",
+    "- [Process](#processes): Code that is run by an OS scheduler and is provided its own memory space.\n",
+    "- [Thread](#threading): A code execution unit in which the OS scheduler executes instructions in sequence.  A process can have one or more threads.\n",
+    "- [Launcher](#Launching-concurrent-processes): A single entry point to running multiple concurrent programs.  Usually a launch script or a settings file provided to a launch program (e.g., `roslaunch`).\n",
     "\n",
     "Communication\n",
     "- Inter-process communication (IPC)\n",
